# gestro

./: CLAUDE.md  CONTRIBUTING.md  README.md  package-lock.json  project.md
.github/workflows/: release.yml
src/: app.html
src-tauri/: Cargo.toml  metainfo.xml  tauri.conf.json
src-tauri/src/: config.rs  gesture.rs  lib.rs  shortcut.rs  shortcut_macos.rs  shortcut_windows.rs
src-tauri/src/input/: linux.rs  macos.rs  mod.rs  windows.rs
src/lib/: GestroWheel.svelte  PieWheel.svelte  ShortcutRecorder.svelte  types.ts
src/routes/: +page.svelte
